--- a/index.html
+++ b/index.html
@@ -34,10 +34,47 @@
             <div class="container">
                 <h1 class="display-4 font-weight-bolder">One page wonder</h1>
                 <p class="lead font-weight-bolder">will rock your sockss off</p>
-                <button type="button" class="btn btn-candy">Primary</button>
+                <button type="button" class="btn btn-candy text-uppercase">learn more</button>
             </div>
         </div>
     </header>
+
+    <!-- section galerie -->
+    <section class="container">
+        <div class="row d-flex align-items-center">
+            <div class="col-md-5">
+                <h1 class="font-weight-bold">For those about to rock</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates vitae repellat aliquam sunt
+                    architecto voluptatem sapiente adipisci tempore ex suscipit ab, odio molestiae excepturi deserunt
+                    nobis laborum eum in eius?</p>
+            </div>
+            <div class="col-md-5 offset-md-1">
+                <img src="./public/img/01.jpg" alt="" class="img-fluid rounded-circle">
+            </div>
+        </div>
+        <div class="row d-flex align-items-center">
+            <div class="col-md-5">
+                <img src="./public/img/02.jpg" alt="" class="img-fluid rounded-circle">
+            </div>
+            <div class="col-md-5 offset-md-1 pt-5">
+                <h1 class="font-weight-bold">we salute you</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates vitae repellat aliquam sunt
+                    architecto voluptatem sapiente adipisci tempore ex suscipit ab, odio molestiae excepturi deserunt
+                    nobis laborum eum in eius?</p>
+            </div>
+        </div>
+        <div class="row d-flex align-items-center">
+            <div class="col-md-5 offset-md-1 pt-5">
+                <h1 class="font-weight-bold">Let there be rock</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates vitae repellat aliquam sunt
+                    architecto voluptatem sapiente adipisci tempore ex suscipit ab, odio molestiae excepturi deserunt
+                    nobis laborum eum in eius?</p>
+            </div>
+            <div class="col-md-5">
+                <img src="./public/img/03.jpg" alt="" class="img-fluid rounded-circle">
+            </div>
+        </div>
+    </section>
 
 
 
