--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <!--header  -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand ml-5" href="#">Navbar</a>
+            <a class="navbar-brand ml-5" href="#">Start bootstrap</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item text-uppercase">
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -42,21 +42,21 @@
     <!-- section galerie -->
     <section class="container">
         <div class="row d-flex align-items-center">
-            <div class="col-md-5">
+            <div class="col-6 col-md-5 col-sm-12">
                 <h1 class="font-weight-bold">For those about to rock</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates vitae repellat aliquam sunt
                     architecto voluptatem sapiente adipisci tempore ex suscipit ab, odio molestiae excepturi deserunt
                     nobis laborum eum in eius?</p>
             </div>
-            <div class="col-md-5 offset-md-1">
+            <div class="col-6 col-md-5 offset-md-1 col-sm-12 ">
                 <img src="./public/img/01.jpg" alt="" class="img-fluid rounded-circle">
             </div>
         </div>
         <div class="row d-flex align-items-center">
-            <div class="col-md-5">
+            <div class="col-6 col-md-5 col-sm-12">
                 <img src="./public/img/02.jpg" alt="" class="img-fluid rounded-circle">
             </div>
-            <div class="col-md-5 offset-md-1 pt-5">
+            <div class="col-6 col-md-5 offset-md-1 pt-5 col-sm-12">
                 <h1 class="font-weight-bold">we salute you</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates vitae repellat aliquam sunt
                     architecto voluptatem sapiente adipisci tempore ex suscipit ab, odio molestiae excepturi deserunt
@@ -64,27 +64,23 @@
             </div>
         </div>
         <div class="row d-flex align-items-center">
-            <div class="col-md-5 offset-md-1 pt-5">
+            <div class="col-6 col-md-5 offset-md-1 pt-5 col-sm-12">
                 <h1 class="font-weight-bold">Let there be rock</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates vitae repellat aliquam sunt
                     architecto voluptatem sapiente adipisci tempore ex suscipit ab, odio molestiae excepturi deserunt
                     nobis laborum eum in eius?</p>
             </div>
-            <div class="col-md-5">
+            <div class="col-6 col-md-5 col-sm-12">
                 <img src="./public/img/03.jpg" alt="" class="img-fluid rounded-circle">
             </div>
         </div>
     </section>
 
 
-
-
-
-
-
-
-
-
+    <!-- footer -->
+    <footer class="bg-dark text-white text-center mt-5 p-5">
+        <p> Copyright &copy; Your Website</p>
+    </footer>
 
     <!-- SCRIPT BOOTSTRAP -->
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
