--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
                     architecto voluptatem sapiente adipisci tempore ex suscipit ab, odio molestiae excepturi deserunt
                     nobis laborum eum in eius?</p>
             </div>
-            <div class="col-6 col-md-5 offset-md-1 col-sm-12 ">
+            <div class="col-6 col-md-5 offset-md-1 col-sm-12 my-sm-5">
                 <img src="./public/img/01.jpg" alt="" class="img-fluid rounded-circle">
             </div>
         </div>
         <div class="row d-flex align-items-center">
-            <div class="col-6 col-md-5 col-sm-12">
+            <div class="col-6 col-md-5 col-sm-12 order-sm-1">
                 <img src="./public/img/02.jpg" alt="" class="img-fluid rounded-circle">
             </div>
-            <div class="col-6 col-md-5 offset-md-1 pt-5 col-sm-12">
+            <div class="col-6 col-md-5 offset-md-1 pt-5 col-sm-12 order-sm-0">
                 <h1 class="font-weight-bold">we salute you</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates vitae repellat aliquam sunt
                     architecto voluptatem sapiente adipisci tempore ex suscipit ab, odio molestiae excepturi deserunt
